# lucid-engine-jat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake-debug.bat  cmake-release.bat  lucid-notepad_session.txt  make.bat
assets/: texture.DDS  texture.tga
includes/: ambient.hpp  camera.hpp  cmdctrl.hpp  light.hpp  mesh.hpp  meshloader.hpp  renderer.hpp  shader.hpp  utils.hpp  vertex.hpp
includes/gli/: CMakeCache.txt  Makefile
libraries/: glew32.exp  glew32.lib
libraries/glm/: CMakeCache.txt
libraries/glm/glm/: CMakeCache.txt
lucid/: CMakeLists.txt  ambient.cpp  camera.cpp  cmdctrl.cpp  cubes_vertices.old.txt  light.cpp  main.cpp  main_old.txt  mesh.cpp  meshloader.cpp  renderer.cpp  shader.cpp  utils.cpp  vertex.cpp
lucid/shaders/: fragmentshader-alpha01.glsl  fragmentshader-firsttest.glsl  fragmentshader-pervertex.glsl  fragmentshader.glsl  vertexshader-pervertex.glsl  vertexshader.glsl
